# pico-rainviewer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: MC_23LCV1024.h  color_tables.h  crc32.h  font.h  holidays.h  rgb_matrix.h  weather_map.h
scripts/: .env.example  README.md  convert_bdf.py  convert_tables.py  generate_holidays.py  generate_terrain.py  rainviewer_api_colors_table.csv  track_mem.py
src/: MC_23LCV1024.cpp  crc32.cpp  main.cpp  rgb_matrix.cpp  test_sram.cpp  weather_map.cpp
src/pio/: hub75e.pio
